# IncentiveCircuit

./: .travis.yml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
data/FruitflyMB/SF traces imaging controls/: 112_M+NS.xlsx_finaldataM+NS_timepoint2.csv  112_M+NS.xlsx_finaldataM+NS_timepoint3.csv  112_M+NS.xlsx_finaldataM+NS_timepoint4.csv  112_M+NS.xlsx_finaldataM+NS_timepoint7.csv  112_M+NS.xlsx_finaldataM+NS_timepoint9.csv  112_M+NS.xlsx_finaldataO_timepoint1.csv  112_M+NS.xlsx_finaldataO_timepoint2.csv  112_M+NS.xlsx_finaldataO_timepoint6.csv  112_M+NS.xlsx_finaldataO_timepoint8.csv  112_O+S.xlsx_finaldataMCH_timepoint1.csv  112_O+S.xlsx_finaldataMCH_timepoint2.csv  112_O+S.xlsx_finaldataMCH_timepoint7.csv  112_O+S.xlsx_finaldataO+S_timepoint2.csv  112_O+S.xlsx_finaldataO+S_timepoint3.csv  112_O+S.xlsx_finaldataO+S_timepoint6.csv  112_O+S.xlsx_finaldataO+S_timepoint8.csv  (+77 more)
examples/: create_arena_paths.py  create_arena_paths_rpe.py  create_arena_paths_rw.py  plot_arena_fishbone.py  plot_arena_fishbone_weights.py  plot_arena_paths.py  plot_arena_pi_lines.py  plot_arena_weight_lines.py  plot_data.py  plot_model.py  plot_tmaze.py  run_arena_paths.py  run_arena_pi.py  run_arena_stats.py  run_arena_traces.py  run_bennett_2021.py  run_bennett_2021_box.py  run_circuit_parameter_exploration.py  run_data_analysis.py  run_handler_2019.py  run_handler_2019_parameters_exploration.py  run_incentive_circuit.py  run_incentive_wheel.py  run_incentivebody.py  run_incentivecomplex.py  run_learning_rule.py  run_microcircuits.py  run_model_comparison.py  run_olfactory_conditioning.py  run_positive_patterning.py  run_subcircuits.py  run_tmaze.py  run_twinspokemodel.py  run_unpaired_a.py  run_wheelmodel.py  test_learning_rule.py
notebooks/: generate_manuscript.ipynb
notebooks/.ipynb_checkpoints/: IncentiveComplex-checkpoint.ipynb
src/: _imaging.py  arena.py  eight_model.py  evaluation.py  force-graph.py  fruitfly.py  imaging.py  incentivebody.py  incentivecomplex.py  liyan_model.py  liyan_motivation.py  modelling.py  modelling_multistep.py  models_base.py  motivation.py  motivation_most_realistic.py  motivation_realistic.py  plot.py  results.py  routines.py  simple_motivation.py  six_model.py  tools.py  twinspoke.py  wheel.py
src/incentive/: __init__.py  arena.py  bennett.py  circuit.py  handler.py  imaging.py  models_base.py  plot.py  results.py  routines.py  tmaze.py  tools.py  wheel.py
(+212 files in other folders)
