[metadata]
name = incentive-circuit
version = 1.0.0
author = Evripidis Gkanias
author_email = ev.gkanias@ed.ac.uk
description = A package implementing the incentive circuit in the fruit fly brain
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evgkanias/IncentiveCircuit
project_urls =
    Bug Tracker = https://github.com/evgkanias/IncentiveCircuit/issues
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT Licence
    Operating System :: OS Independent

[options]
packages = incentive
package_dir =
    incentive = src/incentive
python_requires = >=3.7