[metadata]
name = incentive-circuit
version = v1.0.0-alpha
author = Evripidis Gkanias
author_email = ev.gkanias@ed.ac.uk
description = A package implementing the incentive circuit in the fruit fly brain
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evgkanias/IncentiveCircuit
project_urls =
    Bug Tracker = https://github.com/evgkanias/IncentiveCircuit/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = incentive
package_dir =
    incentive = src/incentive
python_requires = >=3.7